--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#7abcbc</color>
-    <color name="colorPrimaryDark">#7abcbc</color>
+    <color name="colorPrimaryDark">#7ad6d6</color>
     <color name="colorAccent">#7ad6d6</color>
     <color name="white">#ffffff</color>
     <color name="gray">#E3E3E3</color>
