--- a/app/src/main/res/layout/activity_forgot.xml
+++ b/app/src/main/res/layout/activity_forgot.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context="gogrocer.tcc.ForgotActivity">
 
     <RelativeLayout
@@ -40,9 +41,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
+        android:layout_centerInParent="true"
         android:orientation="vertical"
         android:paddingBottom="@dimen/activity_vertical_margin"
-        android:layout_below="@id/rr1"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin">
@@ -85,6 +86,7 @@
             android:layout_marginBottom="@dimen/space_10"
             app:cardCornerRadius="@dimen/space_20"
             android:layout_marginLeft="15dp"
+            android:layout_marginTop="@dimen/space_10"
             android:layout_marginRight="15dp"
             app:cardBackgroundColor="@color/white"
             app:cardElevation="4dp">
@@ -92,7 +94,6 @@
             android:id="@+id/et_login_email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/space_4"
             android:background="@drawable/bg2"
             android:ems="10"
             android:inputType="textEmailAddress"
@@ -108,7 +109,10 @@
             android:id="@+id/btnContinue"
             android:layout_width="match_parent"
             android:layout_height="45dp"
-            android:layout_margin="12dp"
+            android:layout_marginLeft="12dp"
+            android:layout_marginRight="@dimen/space_12"
+
+            android:layout_marginTop="40dp"
             android:background="@drawable/bac1">
 
             <Fonts.LatoBLack
