--- a/app/src/main/res/layout/activity_reward_points.xml
+++ b/app/src/main/res/layout/activity_reward_points.xml
@@ -5,7 +5,6 @@
     android:layout_gravity="center_vertical"
     android:orientation="vertical">
 
-
     <RelativeLayout
         android:layout_width="100dp"
         android:layout_height="100dp"
@@ -18,8 +17,9 @@
 
 
     <LinearLayout
+        android:layout_margin="10dp"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/reward_point_size"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
 
         <Fonts.LatoBLack
@@ -48,6 +48,7 @@
     </LinearLayout>
 
     <LinearLayout
+        android:layout_marginTop="5dp"
         android:layout_width="match_parent"
         android:layout_height="@dimen/gif_size"
         android:layout_gravity="center_vertical"
@@ -60,11 +61,28 @@
             android:layout_height="wrap_content"
             android:visibility="invisible" />
 
-
     </LinearLayout>
 
     <RelativeLayout
         android:id="@+id/reedme_point"
+        android:layout_width="match_parent"
+        android:layout_height="45dp"
+        android:layout_margin="12dp"
+        android:background="@drawable/bg_rounded_button">
+
+        <Fonts.LatoBLack
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:text="@string/tv_toolbar_redeem"
+            android:textColor="#fff"
+            android:textSize="14dp" />
+
+    </RelativeLayout>
+
+    <RelativeLayout
+
+        android:id="@+id/share"
         android:layout_width="match_parent"
         android:layout_height="45dp"
         android:layout_marginLeft="@dimen/space_12"
@@ -76,13 +94,11 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center"
-            android:text="@string/tv_toolbar_redeem"
+            android:text="Share your Referral code"
             android:textColor="#fff"
             android:textSize="14dp" />
 
-
     </RelativeLayout>
-
 
 </LinearLayout>
 
