--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -138,11 +138,17 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="14dp"
             android:layout_marginBottom="40dp"
-            app:cardCornerRadius="@dimen/space_20"
+            app:cardCornerRadius="25dp"
             android:layout_marginLeft="15dp"
             android:layout_marginRight="15dp"
             app:cardBackgroundColor="@color/white"
             app:cardElevation="4dp">
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:hintAnimationEnabled="false"
+                app:hintEnabled="false"
+                app:passwordToggleEnabled="true">
         <EditText
             android:id="@+id/et_login_pass"
             android:layout_width="match_parent"
@@ -155,9 +161,11 @@
             android:textColor="#000"
             android:hint="Password"
             android:drawablePadding="@dimen/space_10"
+            android:drawableStart="@drawable/password"
             android:drawableLeft="@drawable/password"
             android:textColorHint="@color/dark_gray"
             android:textSize="14sp" />
+            </com.google.android.material.textfield.TextInputLayout>
         </androidx.cardview.widget.CardView>
         <RelativeLayout
             android:id="@+id/btnContinue"
