--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -266,18 +266,25 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/space_20"
                 android:layout_marginBottom="30dp"
-                app:cardCornerRadius="@dimen/space_20"
+                app:cardCornerRadius="25dp"
                 android:layout_marginLeft="15dp"
                 android:layout_marginRight="15dp"
                 app:cardBackgroundColor="@color/white"
                 app:cardElevation="4dp">
 
-            <EditText
+                <com.google.android.material.textfield.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:hintAnimationEnabled="false"
+                    app:hintEnabled="false"
+                    app:passwordToggleEnabled="true">
+            <com.google.android.material.textfield.TextInputEditText
                 android:textSize="14sp"
                 android:id="@+id/et_reg_password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="@dimen/space_10"
+                android:drawableStart="@drawable/password"
                 android:drawableLeft="@drawable/password"
                 android:drawablePadding="@dimen/space_10"
                 android:hint="Password"
@@ -285,6 +292,7 @@
                 android:inputType="textPassword"
                 android:maxLength="10"
                 android:ems="10"/>
+                </com.google.android.material.textfield.TextInputLayout>
             </androidx.cardview.widget.CardView>
 
             <androidx.cardview.widget.CardView
