--- a/app/src/main/res/layout/fragment_stores.xml
+++ b/app/src/main/res/layout/fragment_stores.xml
@@ -23,7 +23,7 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/slider_one_height"
+                android:layout_height="220dp"
                 android:background="@color/white">
                 <com.daimajia.slider.library.SliderLayout
                     android:id="@+id/relative_banner"
@@ -47,14 +47,13 @@
                     android:orientation="vertical">
 
                     <androidx.recyclerview.widget.RecyclerView
+                        android:layout_marginTop="20dp"
                         android:id="@+id/rv_stores"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="8dp"
-                        android:layout_marginRight="8dp"
                         android:scrollbars="none"
-                        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
-
+                        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+                        />
 
                 </LinearLayout>
                 <com.facebook.shimmer.ShimmerFrameLayout
