--- a/app/src/main/res/layout/row_store.xml
+++ b/app/src/main/res/layout/row_store.xml
@@ -5,6 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardCornerRadius="15dp"
     app:cardElevation="5dp"
+    android:layout_margin="10dp"
     >
     <LinearLayout
         android:background="@drawable/b_background"
@@ -18,23 +19,26 @@
             android:gravity="top|center"
             android:orientation="vertical">
 
-            <de.hdodenhof.circleimageview.CircleImageView
-                android:layout_marginTop="15dp"
+            <ImageView
+                android:layout_margin="5dp"
                 android:id="@+id/store_image"
-                android:layout_width="90dp"
-                android:layout_height="90dp"
-                android:src="@mipmap/ic_launcher" />
+                android:layout_width="wrap_content"
+                android:layout_height="100dp"
+                android:src="@drawable/icon"
+                />
 
             <TextView
+                android:fontFamily="@font/bold"
+                android:layout_marginTop="5dp"
                 android:id="@+id/store_name"
-                android:layout_width="wrap_content"
+                android:background="@color/colorPrimary"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:layout_marginTop="5dp"
-                android:text="Product Price"
-                android:textColor="@color/black"
-                android:textSize="18sp"
-                android:layout_marginBottom="15dp"
+                android:text="Store Name"
+                android:textColor="@color/white"
+                android:padding="8dp"
+                android:textSize="16sp"
                 />
 
         </LinearLayout>
