--- a/app/src/main/res/layout/fragment_confirm_order.xml
+++ b/app/src/main/res/layout/fragment_confirm_order.xml
@@ -36,6 +36,7 @@
             android:layout_below="@+id/txtPaymentdetails">
 
             <LinearLayout
+                android:id="@+id/yehtohoga"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
@@ -234,8 +235,29 @@
                     </androidx.cardview.widget.CardView>
                 </LinearLayout>
 
+                <TextView
+                    android:layout_marginLeft="@dimen/space_3"
+                    android:fontFamily="@font/bold"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="*NOTE"
+                    android:textColor="@color/colorPrimary"
+                    android:layout_marginTop="@dimen/space_10"
+                    />
+                <TextView
+                    android:layout_marginLeft="@dimen/space_3"
+                    android:id="@+id/note_id"
+                    android:fontFamily="@font/cold"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Text"
+                    android:textColor="@color/black"
+                    android:layout_marginTop="@dimen/space_10"
+                    />
 
             </LinearLayout>
+
+
         </ScrollView>
 
         <LinearLayout
