--- a/app/src/main/res/layout/dialog_product_detail.xml
+++ b/app/src/main/res/layout/dialog_product_detail.xml
@@ -186,13 +186,28 @@
 
 </LinearLayout>
 
+
+        <RatingBar
+            android:id="@+id/ratingbarprod"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/id1"
+            android:theme="@style/RatingBar"
+            android:stepSize=".1"
+            android:visibility="gone"
+            android:layout_margin="@dimen/space_5"
+            android:layout_centerHorizontal="true"
+            android:isIndicator="true"
+            />
+
+
         <Fonts.LatoBLack
             android:id="@+id/textView11"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:layout_below="@+id/id1"
+            android:layout_below="@+id/ratingbarprod"
             android:layout_marginTop="@dimen/space_8"
             android:layout_toLeftOf="@+id/linearLayout"
             android:layout_toStartOf="@+id/linearLayout"
