--- a/app/src/main/res/layout/row_my_order_detail_rv.xml
+++ b/app/src/main/res/layout/row_my_order_detail_rv.xml
@@ -47,6 +47,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="@string/tv_reg_name_hint"
+                    android:maxLines="1"
                     android:textSize="18sp"
                     android:textStyle="bold" />
 
@@ -117,6 +118,16 @@
                 </LinearLayout>
 
             </LinearLayout>
+            <Button
+                android:id="@+id/ratebtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end"
+                android:background="@color/green"
+                android:layout_marginTop="@dimen/space_5"
+                android:text="Rate"
+                android:textAllCaps="false"
+                android:textColor="@color/white"/>
         </LinearLayout>
     </LinearLayout>
 
