--- a/app/src/main/res/layout/dialog_product_detail.xml
+++ b/app/src/main/res/layout/dialog_product_detail.xml
@@ -4,6 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
+
+
     <ImageView
         android:id="@+id/fav_product"
         android:layout_width="40dp"
@@ -13,7 +15,7 @@
         android:src="@drawable/heartf"
         android:layout_alignParentRight="true"
         android:layout_margin="15dp"
-        />
+     />
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/iv_product_detail_img"
@@ -92,8 +94,10 @@
                 android:layout_marginTop="@dimen/space_8"
                 android:background="@drawable/bg_rounded_button"
                 android:gravity="center"
+                android:elevation="@dimen/space_5"
                 android:textSize="@dimen/text_size_X_small"
                 android:padding="@dimen/space_10"
+                android:layout_marginBottom="@dimen/space_5"
                 android:text="@string/tv_pro_add"
                 android:textColor="@color/white" />
 
@@ -194,6 +198,7 @@
             android:layout_below="@+id/id1"
             android:theme="@style/RatingBar"
             android:stepSize=".1"
+            android:elevation="@dimen/space_5"
             android:visibility="gone"
             android:layout_margin="@dimen/space_5"
             android:layout_centerHorizontal="true"
