--- a/app/src/main/res/layout/fragment_product.xml
+++ b/app/src/main/res/layout/fragment_product.xml
@@ -42,17 +42,29 @@
             android:id="@+id/name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="20sp"
-            android:text="Product "
+            android:textSize="18sp"
+            android:text="Product"
+            android:fontFamily="@font/bold"
             android:layout_centerVertical="true"
             android:textColor="@color/white"/>
         <ImageView
+            android:layout_centerVertical="true"
             android:id="@+id/imagefav"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_toLeftOf="@id/imagestar"
+            android:background="@drawable/heartnfw"
+            />
+        <ImageView
+            android:onClick="staring"
+            android:layout_marginLeft="5dp"
+            android:layout_centerVertical="true"
+            android:id="@+id/imagestar"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:src="@drawable/heartnfw"
-            android:visibility="gone"
+            android:background="@drawable/ic_baseline_star_24"
             android:layout_alignParentEnd="true"/>
+
     </RelativeLayout>
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_subcategory"
