--- a/app/src/main/res/layout/activity_product.xml
+++ b/app/src/main/res/layout/activity_product.xml
@@ -4,8 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context="gogrocer.tcc.ProductActivity">
-
+<ScrollView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:fillViewport="true">
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -196,29 +200,50 @@
 
             </LinearLayout>
 
-
+            <RelativeLayout
+                android:id="@+id/rl1"
+                android:visibility="gone"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/id1">
+                <Fonts.LatoBLack
+                    android:id="@+id/headingrating"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true"
+                    android:layout_alignParentTop="true"
+                    android:text="@string/rating"
+                    android:textColor="#000"
+                    android:layout_marginTop="@dimen/space_5"
+                    android:textSize="20sp" />
+                <ImageView
+                    android:id="@+id/allrate"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_alignParentRight="true"
+                    app:srcCompat="@drawable/arrow_forward"/>
             <RatingBar
                 android:id="@+id/ratingbarprod"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/id1"
                 android:theme="@style/RatingBar"
+                android:layout_below="@id/allrate"
                 android:stepSize=".1"
                 android:elevation="@dimen/space_5"
-                android:visibility="gone"
                 android:layout_margin="@dimen/space_5"
                 android:layout_centerHorizontal="true"
                 android:isIndicator="true"
                 />
 
-
+            </RelativeLayout>
             <Fonts.LatoBLack
                 android:id="@+id/textView11"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
-                android:layout_below="@+id/ratingbarprod"
+                android:layout_below="@+id/rl1"
                 android:layout_marginTop="@dimen/space_8"
                 android:layout_toLeftOf="@+id/linearLayout"
                 android:layout_toStartOf="@+id/linearLayout"
@@ -239,5 +264,5 @@
                 android:textColor="#000" />
         </RelativeLayout>
     </RelativeLayout>
-
+</ScrollView>
 </RelativeLayout>
