--- a/app/src/main/res/layout/fragment_product.xml
+++ b/app/src/main/res/layout/fragment_product.xml
@@ -52,17 +52,19 @@
             android:id="@+id/imagefav"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:layout_toLeftOf="@id/imagestar"
+            android:layout_marginLeft="5dp"
             android:background="@drawable/heartnfw"
+            android:layout_alignParentEnd="true"
             />
         <ImageView
-            android:layout_marginLeft="5dp"
+            android:visibility="gone"
+            android:layout_toLeftOf="@id/imagefav"
             android:layout_centerVertical="true"
             android:id="@+id/imagestar"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:background="@drawable/ic_baseline_star_24"
-            android:layout_alignParentEnd="true"/>
+            />
 
     </RelativeLayout>
     <androidx.recyclerview.widget.RecyclerView
