--- a/app/src/main/res/layout/data_holder_5.xml
+++ b/app/src/main/res/layout/data_holder_5.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginTop="12dp"
     >
     <LinearLayout
         android:layout_width="match_parent"
@@ -12,7 +13,7 @@
             android:id="@+id/thumbnail"
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:layout_height="100dp"
+            android:layout_height="160dp"
             android:layout_marginTop="10dp"
             android:layout_marginRight="20dp"
             android:layout_marginLeft="20dp"
@@ -21,7 +22,7 @@
             android:id="@+id/thumbnail1"
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:layout_height="100dp"
+            android:layout_height="160dp"
             android:layout_toRightOf="@id/thumbnail"
             android:layout_marginTop="10dp"
             android:layout_marginRight="20dp"
@@ -29,8 +30,6 @@
             android:background="@color/gray" />
 
     </LinearLayout>
-
-
 
 
 
