--- a/app/src/main/res/layout/fragment_category.xml
+++ b/app/src/main/res/layout/fragment_category.xml
@@ -85,7 +85,17 @@
             android:layout_height="wrap_content"
             />
 
-
+        <TextView
+            android:textStyle="italic"
+            android:textColor="@color/black"
+            android:id="@+id/no_product"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="No Products Available"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:textAlignment="center"
+            />
 
     </LinearLayout>
 
