--- a/app/src/main/res/layout/fragment_stores.xml
+++ b/app/src/main/res/layout/fragment_stores.xml
@@ -192,6 +192,11 @@
                         app:layout_behavior="@string/appbar_scrolling_view_behavior"
                         />
             </LinearLayout>
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/catprodrv"
+                    android:background="@color/white"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
             </LinearLayout>
 
         </RelativeLayout>
