--- a/app/src/main/res/layout/fragment_acount.xml
+++ b/app/src/main/res/layout/fragment_acount.xml
@@ -398,7 +398,7 @@
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_marginBottom="@dimen/space_5"
-                android:src="@drawable/thumb"/>
+                android:src="@drawable/thumb1"/>
             <TextView
                 android:layout_margin="@dimen/space_2"
                 android:layout_width="wrap_content"
