--- a/app/src/main/res/layout/activity_my__oreder_activity.xml
+++ b/app/src/main/res/layout/activity_my__oreder_activity.xml
@@ -21,27 +21,6 @@
             app:popupTheme="@style/AppTheme.PopupOverlay"
             app:titleTextAppearance="@style/RobotoBoldTextAppearance">
 
-            <!--<RelativeLayout-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="wrap_content">-->
-
-                <!--<ImageView-->
-                    <!--android:id="@+id/back_button"-->
-                    <!--android:layout_width="wrap_content"-->
-                    <!--android:layout_height="wrap_content"-->
-                    <!--android:background="@drawable/ic_arrow_back_black_24dp" />-->
-
-                <!--<Fonts.LatoBLack-->
-                    <!--android:layout_width="match_parent"-->
-                    <!--android:layout_height="wrap_content"-->
-                    <!--android:layout_toRightOf="@id/back_button"-->
-                    <!--android:layout_marginLeft="@dimen/space_8"-->
-                    <!--android:text="Products"-->
-                    <!--android:textColor="#ffffff"-->
-                    <!--android:textSize="18sp" />-->
-
-            <!--</RelativeLayout>-->
-
         </androidx.appcompat.widget.Toolbar>
 
     </com.google.android.material.appbar.AppBarLayout>
@@ -57,7 +36,7 @@
         app:tabMinWidth="40dp"
         app:tabPaddingEnd="0dp"
         app:tabPaddingStart="0dp"
-        app:tabMode="fixed"
+        app:tabMode="scrollable"
         android:elevation="0dp"
         app:tabIndicatorColor="@android:color/white"
         app:tabIndicatorHeight="5dp"
