--- a/app/src/main/res/layout/activity_my__oreder_activity.xml
+++ b/app/src/main/res/layout/activity_my__oreder_activity.xml
@@ -34,6 +34,7 @@
         android:background="@color/green"
         app:tabGravity="center"
         app:tabMinWidth="40dp"
+        app:tabTextAppearance="@style/MyTabLayoutTextAppearance"
         app:tabPaddingEnd="0dp"
         app:tabPaddingStart="0dp"
         app:tabMode="scrollable"
