--- a/app/src/main/res/layout/fragment_confirm_order.xml
+++ b/app/src/main/res/layout/fragment_confirm_order.xml
@@ -153,6 +153,24 @@
                                 android:layout_height="wrap_content"
                                 android:padding="@dimen/space_5"
                                 android:textStyle="bold" />
+                            <Fonts.LatoBLack
+                                android:textColor="@color/red_btn_bg_color"
+                                android:id="@+id/txtDiscount"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:paddingTop="@dimen/space_1"
+                                android:paddingBottom="@dimen/space_1"
+                                android:paddingRight="@dimen/space_5"
+                                android:paddingLeft="@dimen/space_5"
+                                android:textStyle="bold"
+                                android:textSize="18sp"/>
+                            <Fonts.LatoBLack
+                                android:textColor="#000"
+                                android:id="@+id/txtTotalamount"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:padding="@dimen/space_5"
+                                android:textStyle="bold" />
 
                             <!--<LinearLayout
                                 android:layout_width="match_parent"
